--- a/style/about.css
+++ b/style/about.css
@@ -1,256 +1,7 @@
-:root {
-    --main-color: #9fcb22;
-    --dark-main: #14462e;
-    --back-blue: #eef7fc;
-    --red: #d9485b;
-    --black: #000;
-    --white: #fff;
-    --transition: 0.5s;
-    --border: .1rem solid rgba(0, 0, 0, .1);
-    --border-hover: .1rem solid var(--black);
-    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-}
-
-* {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-
-a{
-    text-decoration: none;
-}
-.container {
-    margin-inline: auto;
-    padding-inline: 15px;
-}
-
-@media (min-width:768px) {
-    .container {
-        width: 750px;
-    }
-}
-@media (min-width:992px) {
-    .container {
-        width: 950px;
-    }
-}
-@media (min-width:1200px) {
-    .container {
-        width: 1170px;
-    }
-}
-
-.header {
-    background: #F6FAFB url(../image/background2.png) center no-repeat;
-    height: 60vh;
-    margin-block-end: 150px;
-    position: relative;
-}
-
-@media (max-width:991px) {
-    .header {
-        background-position: right;
-    }
-    .links__item {
-        display: none;
-    }
-}
-
-.header .container {
-    padding-block: 30px;
-}
-.header__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-}
-.sliceHead {
-    position: absolute;
-    inset-inline-start: 0;
-    inset-block-start: 0;
-}
-
-.nav__links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 30px;
-}
-@media (min-width:991px) {
-    .links__item {
-        display: flex;
-        justify-content: space-between;
-        gap: 30px;
-    }
-   
-}
-.links__item li a {
-    font-size: 19px;
-    font-family: "Barlow", sans-serif;
-    font-weight: 500;
-    color: var(--black);
-    position: relative;
-    transition: var(--transition);
-    opacity: 0.5;
 
 
-}
-.links__item li a::before {
-    content: "";
-    position: absolute;
-    background-color: var(--main-color);
-    width: 0%;
-    height: 2px;
-    bottom: -7px;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: var(--transition);
-}
-.links__item li a:hover::before {
-    width: 100%;
-}
-.links__item li:hover a {
-    opacity: 1;
-}
-@media (max-width:767px) {
-    .nav__icons {
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        right: -105%;
-        top: 50%;
-        gap: 7px;
-        transform: translateY(-50%);
-        transition: var(--transition);
-        z-index: 2000;
-    }
-}
-.nav__icons a i {
-    background-color: white;
-    padding: 13px;
-    border-radius: 50%;
-    color: var(--main-color);
-    margin-inline: 2px;
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
-    transition: var(--transition);
-}
-.nav__icons a:last-child{
-    position: relative;
-}
-.nav__icons a:last-child span {
-    position: absolute;
-    right: 0;
-    font-size: 8px;
-    background-color: var(--black);
-    padding-inline: 5px;
-    padding-block: 3px;
-    border-radius: 50%;
-    color: white;
-}
-.nav__icons a i:hover {
-    background-color: var(--back-blue);
-    color: var(--black);
-    transform: scale(1.1) rotate(7deg);
-}
-.header__toggle-menu i {
-    color: var(--dark-main);
-    font-size: 20px;
-    padding: 12.8px 20.8px;
-    border-radius: 50%;
-    transition: var(--transition);
-    position: absolute;
-    right: 24px;
-    top: 25%;
-}
-@media (min-width:768px) {
-    .header__toggle-menu i {
-        display: none;
-    }
-    .bottom-navbar {
-        display: none;
-    }
-}
-.bottom-navbar {
-    background-color: var(--main-color);
-    position: fixed;
-    inset-inline-start: 0;
-    inset-inline-end: 0;
-    inset-block-end: 0;
-    text-align: center;
-    z-index: 10000;
-}
-.bottom-navbar a {
-    color: white;
-    padding: 16px;
-    font-size: 22px;
-}
 
-.header__constant-title {
-    position: absolute;
-    left: 50%;
-    top: 55%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    width: 375px;
-    height: 190px;
-    padding: 48px;
-    text-align: center;
-    transition: var(--transition);
-    border-radius: 7px;
-    overflow: hidden;
-}
-.header__constant-title:hover {
-    border-block: 2px solid var(--main-color);
-    transition: var(--transition);
-}
-.header__constant-title::before,
-.header__constant-title::after {
-    position: absolute;
-    content: "";
-    width: 2px;
-    height: 0;
-    background-color: black;
-    top: 50%;
-    transform: translateY(-50%)
-}
-
-.header__constant-title::before {
-    inset-inline-start: 0;
-}
-.header__constant-title::after {
-    inset-inline-end: 0;
-}
-.header__constant-title:hover::after,
-.header__constant-title:hover::before {
-    height: 100%;
-    transition: 1s;
-    
-}
-@media (max-width:768px) {
-    .header__constant-title {
-        width: 97%;
-    }
-}
-.header__constant-title span {
-    font-size: 20.3px;
-    font-family: "Jost", sans-serif;
-    font-weight: 500;
-}
-.header__constant-title span a {
-    color: var(--main-color);
-}
-.header__constant-title h2 {
-    font-size: 40px;
-}
-
+/* start feature  */
 .featurePrice {
     margin-block-end: 144px;
 }
