--- a/style/global.css
+++ b/style/global.css
@@ -567,6 +567,12 @@ header {
   .testimonial .container {
     display: flex;
     gap: 32px;
+    justify-content: space-between;
+  }
+  @media (min-width:1400px) {
+    .testimonial .container {
+      justify-content: space-around;
+    }
   }
   @media (max-width: 991px) {
     .testimonial .container {
@@ -736,7 +742,7 @@ header {
   }
   .footer .container {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
       gap: 16px;
       text-align: center;
   }
