--- a/style/shope.css
+++ b/style/shope.css
@@ -148,3 +148,11 @@
     gap: 60px;
     }
 }
+@media (max-width:400px){
+    .shop-content .products {
+        padding: 5px;
+    }
+    .shop-section .box {
+        width: 300px;
+    }
+}
